--- a/default.css
+++ b/default.css
@@ -276,8 +276,7 @@ h6{font-size:16px;}
 }
 
 .about-wrapper{
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px,  1fr));
+   
       padding-bottom: 50px;
        padding-top: 50px;
        gap: 50px;
@@ -291,13 +290,17 @@ h6{font-size:16px;}
 }
 
 .social-links{
-  display: grid;
-  align-content: center;
+ display:flex;
+ flex-direction: column;
+
   text-align: center;
 }
 
 #social_img{
-    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
 }
 
 .post-wrapper{
@@ -305,6 +308,7 @@ h6{font-size:16px;}
    grid-template-columns: repeat(auto-fit,320px);
    gap: 20px;
    justify-content: center;
+   align-content: center;
    padding-bottom: 50px;
 }
 
